# folderol

./: .gitignore  .gitmodules  README.md  folderol.cabal  folderol.lock-8.0.2
bench/: bench.hs
bench/Bench/: Append2.hs  Array.hs  Audio.hs  Chan.hs  Clustering.hs  Correlation.hs  ManyChan.hs  Part2.hs  PartitionAppend.hs  Plumbing.hs  Quickhull.hs  Sized.hs
bench/Bench/Append2/: Conduit.hs  Folderol.hs  Hand.hs  Pipes.hs  Streaming.hs  Vector.hs
bench/Bench/Array/: Folderol.hs  Helper.hs  Vector.hs
bench/Bench/Audio/: Audio.hs  Folderol.hs  Hand.hs  Vector.hs
bench/Bench/Chan/: Base.hs  Chunk.hs  None.hs  Unagi.hs
bench/Bench/Clustering/: ClosestPoints.hs  Normalize2.hs  Quadtree.hs  Quickhull.hs
bench/Bench/Correlation/: Base.hs  Conduit.hs  Model.hs  Pipes.hs  Queries.hs  Stats.hs  Streaming.hs  Top.hs  TopQ1F.hs  TopQ1H.hs  TopQ1U.hs  TopQ2F.hs  TopQ2U.hs  TopQ3F.hs  TopQ3U.hs  TopQ4F.hs  TopQ4U.hs
bench/Bench/ManyChan/: Base.hs  None.hs  Unagi.hs
bench/Bench/Part2/: Conduit.hs  Folderol.hs  Hand.hs  Pipes.hs  Streaming.hs  Vector.hs
bench/Bench/PartitionAppend/: Folderol.hs  FolderolWarn.hs  Hand.hs  Vector.hs
bench/Bench/Plumbing/: Box.hs  Chunks.hs  Conduit.hs  Folderol.hs  Foldl.hs  ParseInt.hs  Pipes.hs  Streaming.hs  Vector.hs
bench/Bench/Quickhull/: Conduit.hs  Folderol.hs  FolderolFilterMax.hs  FolderolFilterMaxGen.hs  Hand.hs  HandFilterMax.hs  Pipes.hs  Skeleton.hs  Streaming.hs  Vector.hs
sketch/: Battery.hs  CoPull.hs  Coroutine.hs  Duality.hs  Network.hs  Pull.hs  Push.hs  PushCPS.hs  VectorMapM.hs
src/: Folderol.hs
src/Folderol/: Pretty.hs  Process.hs  Sink.hs  Source.hs  Spawn.hs  Splice.hs  Typed.hs
src/Folderol/Internal/: Haskell.hs  Pretty.hs
src/Folderol/Process/: Append.hs  Chunk.hs  Filter.hs  Fold.hs  Map.hs  Map2.hs  Merge.hs  Slice.hs  Zip.hs
src/Folderol/Tomorrow/: Exp.hs  Name.hs  Proc.hs  ProcDisconnect.hs  ProcFinite.hs  ProcNondet.hs  S.hs
src/Folderol/Typed/: Name.hs  Network.hs  Process.hs
src/Folderol/Typed/Process/: Internal.hs
src/Folderol/Untyped/: Builtins.hs  Codegen.hs  Name.hs  Network.hs  NetworkSummary.hs  Process.hs  Stream.hs  Transform.hs
src/Folderol/Untyped/Transform/: CullOutputs.hs  FuseNetwork.hs  Fusion.hs  InsertDups.hs  Minimise.hs
test/: test.hs
test/Test/Folderol/: Kernel.hs  MaximumProcessCount.hs  Spawn.hs  TradeExample.hs
test/Test/Folderol/Kernel/: AppendSelf.hs  Chunk.hs  Cycle.hs  Filter1.hs  FilterMap.hs  JoinBy.hs  Map1.hs  Map2.hs  Map2Ignorant.hs  PartitionAppend.hs  Zip1.hs  ZipDup3.hs  ZipSelf.hs  ZipSelfTail.hs  ZipWith3.hs
test/Test/Folderol/Process/: Map.hs
