name:                  folderol
version:               0.0.1
license:               AllRightsReserved
author:                Amos Robinson <amos.robinson@gmail.com>
maintainer:            Amos Robinson <amos.robinson@gmail.com>
copyright:             (c) 2017 Amos Robinson
synopsis:              Fusion with processes
category:              ?
cabal-version:         >= 1.8
build-type:            Simple
description:           

library
  build-depends:
                       ambiata-p
                     , ambiata-x-eithert
                     , base
                     , containers
                     , template-haskell
                     , transformers
                     , wl-pprint-annotated
                     , ghc-prim
                     , vector

  ghc-options:         -Wall -O2

  hs-source-dirs: src

  exposed-modules:
                    Folderol

                    Folderol.Internal.Pretty
                    Folderol.Internal.Haskell

                    Folderol.Process.Map
                    Folderol.Process.Filter
                    Folderol.Process.Zip
                    Folderol.Process

                    Folderol.Splice
                    Folderol.Sink
                    Folderol.Source
                    Folderol.Spawn

                    Folderol.Typed
                    Folderol.Typed.Name
                    Folderol.Typed.Network
                    Folderol.Typed.Process
                    Folderol.Typed.Process.Internal

                    Folderol.Untyped.Codegen
                    Folderol.Untyped.Name
                    Folderol.Untyped.Network
                    Folderol.Untyped.Process
                    Folderol.Untyped.Stream
                    Folderol.Untyped.Transform
                    Folderol.Untyped.Transform.CullOutputs
                    Folderol.Untyped.Transform.InsertDups
                    Folderol.Untyped.Transform.Fusion
                    Folderol.Untyped.Transform.Minimise

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test

  build-depends:
                       folderol
                     , ambiata-p
                     , ambiata-x-eithert
                     , base
                     , transformers
                     , hedgehog == 0.1
                     , vector

  ghc-options:         -Wall -O2

