name:                  folderol
version:               0.0.1
license:               AllRightsReserved
author:                Amos Robinson <amos.robinson@gmail.com>
maintainer:            Amos Robinson <amos.robinson@gmail.com>
copyright:             (c) 2017 Amos Robinson
synopsis:              Fusion with processes
category:              ?
cabal-version:         >= 1.8
build-type:            Simple
description:           

library
  build-depends:
                       ambiata-p
                     , ambiata-x-eithert
                     , base
                     , containers
                     , template-haskell
                     , transformers
                     , wl-pprint-annotated
                     , ghc-prim
                     , vector
                     , primitive
                     , mmorph
                     , monad-control
                     , lifted-async
                     , resourcet
                     , unagi-chan

  ghc-options:         -Wall -O2

  hs-source-dirs: src

  exposed-modules:
                    Folderol

                    Folderol.Internal.Pretty
                    Folderol.Internal.Haskell

                    Folderol.Process.Append
                    Folderol.Process.Chunk
                    Folderol.Process.Filter
                    Folderol.Process.Fold
                    Folderol.Process.Map
                    Folderol.Process.Merge
                    Folderol.Process.Slice
                    Folderol.Process.Zip
                    Folderol.Process

                    Folderol.Splice
                    Folderol.Sink
                    Folderol.Source
                    Folderol.Spawn

                    Folderol.Typed
                    Folderol.Typed.Name
                    Folderol.Typed.Network
                    Folderol.Typed.Process
                    Folderol.Typed.Process.Internal

                    Folderol.Untyped.Builtins
                    Folderol.Untyped.Codegen
                    Folderol.Untyped.Name
                    Folderol.Untyped.Network
                    Folderol.Untyped.NetworkSummary
                    Folderol.Untyped.Process
                    Folderol.Untyped.Stream
                    Folderol.Untyped.Transform
                    Folderol.Untyped.Transform.CullOutputs
                    Folderol.Untyped.Transform.InsertDups
                    Folderol.Untyped.Transform.Fusion
                    Folderol.Untyped.Transform.FuseNetwork
                    Folderol.Untyped.Transform.Minimise

                    Folderol.Tomorrow.Name
                    Folderol.Tomorrow.Exp
                    Folderol.Tomorrow.S
                    Folderol.Tomorrow.ProcNondet
                    Folderol.Tomorrow.Proc
                    Folderol.Tomorrow.ProcFinite
                    Folderol.Tomorrow.ProcDisconnect

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test

  build-depends:
                       folderol
                     , ambiata-p
                     , ambiata-x-eithert
                     , base
                     , transformers
                     , hedgehog == 0.1
                     , vector
                     , ghc-prim

  ghc-options:         -Wall -threaded -O2


benchmark bench
  type: exitcode-stdio-1.0
  main-is: bench.hs
  hs-source-dirs: bench

  build-depends:
                       folderol
                     , ambiata-p
                     , ambiata-x-eithert
                     , ambiata-anemone
                     , base
                     , transformers
                     , criterion
                     , deepseq
                     , vector
                     , unagi-chan
                     , primitive
                     , ghc-prim
                     , text
                     , streaming
                     , pipes
                     , pipes-extras
                     , conduit
                     , bytestring
                     , vector-th-unbox
                     , foldl
                     , mmorph

  ghc-options:         -Wall -threaded -O3 -rtsopts

